<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context="com.fire.fire.whatsapp.ui.activities.MainActivity">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_new_group"
        android:title="@string/menu_title_new_group"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_new_broadcast"
        android:title="@string/menu_title_new_broadcast"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_whatsapp_web"
        android:title="@string/menu_title_whatsapp_web"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_starred_messages"
        android:title="@string/menu_title_starred_messages"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_status"
        android:title="@string/menu_title_status"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search_white_24dp"
        android:title=""
        app:showAsAction="always"/>

    <item
        android:id="@+id/action_add_contact"
        android:icon="@drawable/ic_person_add_white_24dp"
        android:title=""
        app:showAsAction="always"/>

</menu>
